<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/create_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/createUsername"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CreateUsername"
        android:maxLines="1"
        android:inputType="text"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/createEmail"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginEmail"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/createPassword"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/LoginPassword"
        android:maxLines="1"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/createAccount"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:background="@android:color/transparent"
        android:text="@string/loginCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/AlreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity= "center"
        android:text="Already Registered? Login Here"
        android:textColor="@android:color/holo_red_dark"/>

</LinearLayout>