<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linear_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/todo"
            tools:ignore="ObsoleteLayoutParam" />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/logout"
            android:textColor="#ED0EC5"
            android:textSize="16sp"
            android:textStyle="normal"
            tools:ignore="ObsoleteLayoutParam" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/linear_ll"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"/>

</RelativeLayout>